# VoxelEngine

./: CMakeLists.txt  imgui.ini
assets/shaders/: chunk.frag  chunk.vert  cube.frag  skybox.frag  skybox.vert
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Game/: Game.cpp  Game.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h
src/TextureLoader/: TextureLoader.cpp  TextureLoader.h
src/World/: Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
